@startuml
skinparam monochrome false
skinparam shadowing false

title Class Diagram for UC008

class PatientController {
  +CreatePatient(CreatingPatientDto dto): Task<ActionResult<PatientDto>>
}


class PatientService {
  +AddAsync(CreatingPatientDto dto): Task<PatientDto>
}

class CreatePatientDTO {
  - FullName: FullName
  - ContactInformation: ContactInformation
  - DateOfBirth: SystemDate
  - Gender: Gender
  - MedicalCondition: MedicalCondition
  - ContactInformation: ContactInformation
  - EmergencyContact: int
  - AppointmentHistory: AppointmentHistory 
  'TODO: Review AppointmentHistory type
}

class FullName{
    + FirstName: String
    + LastName: String
}

enum Gender {
  Male, Female
}

class ContactInformation{
    + PhoneNumber: String
    + Email: String
}


class Patient {
  - FullName: FullName
  - ContactInformation: ContactInformation
  - DateOfBirth: SystemDate
  - Gender: Gender
  - MedicalCondition: MedicalCondition
  - MedicalRecordNumber: String
  - ContactInformation: ContactInformation
  - EmergencyContact: int
  - AppointmentHistory: AppointmentHistory
    'TODO: Review AppointmentHistory type and Medical Conditions
}

class IPatientRepository {
  
}

interface IRepository {
  + AddAsync(Patient patient): void
}


'class Database {
'  + save(Patient patient): void
'}

CreatePatientDTO --> PatientController : uses
PatientController --> PatientService : uses
PatientService --> Patient : creates
PatientService --> IPatientRepository : adds patient to
IPatientRepository --> IRepository : implements
Patient --> ContactInformation : has
Patient --> FullName : has
Patient --> Gender : has
CreatePatientDTO --> ContactInformation : has
CreatePatientDTO --> FullName : has
CreatePatientDTO --> Gender : has

@enduml
